# purple-icq

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
src/: chat_info.rs  icq_system.rs  lib.rs  logging.rs  messages.rs
src/glib/: glist.rs  mod.rs
src/icq/: account.rs  client.rs  mod.rs  poller.rs  protocol.rs  system.rs
src/icq/client/: events.rs  mod.rs  try_result.rs
src/messages/: account_handle.rs  account_proxy.rs  connection_handle.rs  connection_proxy.rs  handle_proxy.rs  mod.rs
src/purple/: account.rs  blist.rs  chat.rs  connection.rs  conversation.rs  ffi.rs  group.rs  hashtable.rs  loader.rs  mod.rs  plugin.rs  prpl.rs  status_type.rs
src/purple/account/: mod.rs  protocol.rs  settings.rs
src/purple/connection/: connections.rs  mod.rs  protocol_data.rs
src/purple/handlers/: entrypoints.rs  mod.rs  traits.rs
