[package]
edition = "2018"
name = "purple-icq"
version = "0.1.0"
authors = ["Isra17 <isra017@gmail.com>"]

[lib]
name = "purple_icq"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
libc = "*"
glib-sys = "*"
glib = "*"
purple-sys = {git = "https://github.com/flared/libpurple-rust", rev = "bdee978aead20001cf56264f857eba27c5ea7f62"}
log = "0.4.8"
env_logger = "0.7"
lazy_static = "1.4.0"
paste = "0.1"
os_pipe = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6"
rand = "0.7"
surf = "2.0.0-alpha"
uuid = { version = "0.8", features = ["v5"] }

[dependencies.async-std]
version = "1.6"
features = ["unstable"]

[patch.crates-io]
http-types = { git = 'https://github.com/flared/http-types', rev = "02c9e09c05c8d0fafd4459c97a832e98bacfc9d0" }

