[package]
edition = "2018"
name = "purple-icq"
version = "0.1.0"
authors = ["Isra17 <isra017@gmail.com>"]

[lib]
name = "purple_icq"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
libc = "*"
glib-sys = "*"
glib = "*"
purple = { package = "purple-rs", version = "*" }
log = "0.4.8"
env_logger = "0.7"
lazy_static = "1.4.0"
paste = "0.1"
os_pipe = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6"
rand = "0.7"
surf = "=2.0.0-alpha.4"
uuid = { version = "0.8", features = ["v5"] }
url = "2.1.1"
futures = "0.3"
htmlescape = "0.3"

[dependencies.async-std]
version = "^1"
features = ["unstable"]

[patch.crates-io]
http-types = { git = 'https://github.com/flared/http-types', rev = "f7c2bcefef4071c9901515c8ce40ce0ad3e08705" }

